ADD: Build command as rules can differ between lint and build

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -35,3 +35,5 @@ jobs:
           npm install
           echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
           npm run lint >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+          npm run build >> $GITHUB_STEP_SUMMARY
