--- a/path-finding-visualizer/.prettierrc
+++ b/path-finding-visualizer/.prettierrc
@@ -3,6 +3,7 @@
   "tabWidth": 2,
   "semi": true,
   "singleQuote": true,
+  "singleAttributePerLine": true,
   "printWidth": 100,
   "bracketSpacing": true,
   "endOfLine": "lf"
