--- a/path-finding-visualizer/tsconfig.json
+++ b/path-finding-visualizer/tsconfig.json
@@ -20,7 +20,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
-    "allowJs": false,
+    "allowJs": false
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
