--- a/path-finding-visualizer/package.json
+++ b/path-finding-visualizer/package.json
@@ -17,7 +17,8 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vite-plugin-eslint": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
