--- a/path-finding-visualizer/tsconfig.json
+++ b/path-finding-visualizer/tsconfig.json
@@ -22,6 +22,6 @@
     "noImplicitAny": true,
     "allowJs": false
   },
-  "include": ["src", ".eslintrc.cjs"],
+  "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
