--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -37,6 +37,27 @@ jobs:
           npm run lint >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
           npm run build >> $GITHUB_STEP_SUMMARY
+
+  pr-format:
+    name: Formatter
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Setup Node
+        uses: actions/setup-node@v3
+
+      - name: Install dependencies
+        run: |
+          cd path-finding-visualizer
+          npm install
+
+      - name: Format Project
+        run: |
+          cd path-finding-visualizer 
+          npm install
           echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
           npm run prettier >> $GITHUB_STEP_SUMMARY
 
