--- a/path-finding-visualizer/package.json
+++ b/path-finding-visualizer/package.json
@@ -25,7 +25,8 @@
     "eslint-plugin-react": "^7.33.2",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
