--- a/path-finding-visualizer/package.json
+++ b/path-finding-visualizer/package.json
@@ -14,6 +14,7 @@
     "coverage": "vitest --coverage"
   },
   "dependencies": {
+    "@datastructures-js/priority-queue": "^6.3.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
