--- a/path-finding-visualizer/package.json
+++ b/path-finding-visualizer/package.json
@@ -20,6 +20,7 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
+    "@mui/system": "^5.14.17",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
